<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lic_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LicActivity">

    <TextView
        android:id="@+id/term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/term"
        app:layout_constraintBottom_toTopOf="@+id/payPeriod"
        app:layout_constraintEnd_toStartOf="@+id/editTerm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/payPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/pay_period"
        app:layout_constraintBottom_toTopOf="@+id/first_pay"
        app:layout_constraintEnd_toStartOf="@+id/editPayPeriod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term" />

    <TextView
        android:id="@+id/first_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/first_year_pay"
        app:layout_constraintBottom_toTopOf="@+id/second_pay"
        app:layout_constraintEnd_toStartOf="@+id/editFirstPay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payPeriod" />

    <TextView
        android:id="@+id/second_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/second_year_onward"
        app:layout_constraintBottom_toTopOf="@+id/bankAnnualInterest"
        app:layout_constraintEnd_toStartOf="@+id/editSecondPay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_pay" />

    <EditText
        android:id="@+id/editTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/maturity_term_period_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editPayPeriod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/term"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPayPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/premium_payment_term_period_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editFirstPay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/payPeriod"
        app:layout_constraintTop_toBottomOf="@+id/editTerm"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editFirstPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/premium_for_first_year_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editSecondPay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_pay"
        app:layout_constraintTop_toBottomOf="@+id/editPayPeriod"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editSecondPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/premium_since_second_year_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editBankAnnualInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/second_pay"
        app:layout_constraintTop_toBottomOf="@+id/editFirstPay" />


    <TextView
        android:id="@+id/bankAnnualInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/bank_interest"
        app:layout_constraintBottom_toTopOf="@+id/bank5Interest"
        app:layout_constraintEnd_toStartOf="@+id/editBankAnnualInterest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_pay" />

    <EditText
        android:id="@+id/editBankAnnualInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_1_year_bank_interest"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editBank5Interest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bankAnnualInterest"
        app:layout_constraintTop_toBottomOf="@+id/editSecondPay" />

    <TextView
        android:id="@+id/bank5Interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/bank_5_interest"
        app:layout_constraintBottom_toTopOf="@+id/calcButton"
        app:layout_constraintEnd_toStartOf="@+id/editBank5Interest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankAnnualInterest" />

    <EditText
        android:id="@+id/editBank5Interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_5_years_bank_interest"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/calcButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bank5Interest"
        app:layout_constraintTop_toBottomOf="@+id/editBankAnnualInterest" />


    <TextView
        android:id="@+id/Investment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_investment"
        app:layout_constraintBottom_toTopOf="@+id/FDReturns"
        app:layout_constraintEnd_toStartOf="@+id/showInvestment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcButton" />

    <TextView
        android:id="@+id/showInvestment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textview"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/showFdsReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Investment"
        app:layout_constraintTop_toBottomOf="@+id/calcButton" />

    <TextView
        android:id="@+id/FDReturns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/fd_s_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/showFdsReturn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Investment" />

    <TextView
        android:id="@+id/showFdsReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/textview"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/FDReturns"
        app:layout_constraintTop_toBottomOf="@+id/showInvestment" />

    <Button
        android:id="@+id/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:enabled="true"
        android:onClick="calculate"
        android:text="@string/calculate"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/showInvestment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editBank5Interest"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>