<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/gps_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:onClick="startGpsAlarm"
        android:text="@string/title_gps_alarm"
        app:layout_constraintBottom_toTopOf="@+id/basic_activity"
        app:layout_constraintEnd_toStartOf="@+id/lic_calc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lic_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:onClick="startLicUtil"
        android:text="@string/title_lic_calc"
        app:layout_constraintBottom_toTopOf="@+id/fd_interest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gps_alarm"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/basic_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:onClick="startBasic"
        android:text="@string/basic"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toStartOf="@id/fd_interest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gps_alarm" />

    <Button
        android:id="@+id/fd_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/fd_interest"
        android:onClick="startFD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/basic_activity"
        app:layout_constraintTop_toBottomOf="@+id/lic_calc" />

    <Button
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="startScrolling"
        android:text="@string/scrolling"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basic_activity" />

</androidx.constraintlayout.widget.ConstraintLayout>